Commit skeleton code

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -1,7 +1,8 @@
 <div ng-controller="HeaderController">
     <nav style="width:200px" id="side-menu">
         <a href="#" ng-click="closeMenu()">Close &times;</a>
-        <a href="#">Projects</a>
+        <a ui-sref="home()">Home</a>
+        <a ui-sref="projects.list()">Projects</a>
     </nav>
 
     <div id="top-menu" ng-click="toggleMenu()">
