--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -5,7 +5,7 @@
         <a ui-sref="projects.list()">Projects</a>
     </nav>
 
-    <div id="top-menu" ng-click="toggleMenu()">
+    <div id="top-menu" ng-click="toggleCollapsibleMenu()">
         <span>&#9776;</span>
     </div>
 </div>
