initial commit for listings view html and css

--- a/modules/projects/client/views/list-projects.client.view.html
+++ b/modules/projects/client/views/list-projects.client.view.html
@@ -1,8 +1,21 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <link rel="stylesheet" href="../../../../public/lib/bootstrap/dist/css/bootstrap.min.css">
+  <link rel="stylesheet" href="../css/list-projects.css">
+</head>
+<body>
+
 <section ng-controller="ProjectsController">
-  <div class="page-header">
-    <h1>Projects</h1>
-  </div>
-  <div class="list-group">
-    List of projects..
+  <div class="container">
+    <div class="list-group">
+      <a href="#" class="list-group-item">
+        <p><b>Project Name</b><br>
+          Category<br>
+          Short Description<br>
+        </p>
+      </a>
+    </div>
   </div>
 </section>
+</body>
