--- a/modules/projects/client/views/create-project.client.view.html
+++ b/modules/projects/client/views/create-project.client.view.html
@@ -7,7 +7,7 @@
         <textarea rows="5" class="form-control" id="details" placeholder="Decribe your project, make it simple and cool..."></textarea>
       </section>
     </div>
-    <button type="submit" class="btn btn-success btn-lg btn-block">Next></button>
+    <button type="submit" color="PMS 362c" class="btn btn-success btn-lg btn-block">Next></button>
     <p id="progress" class="form-text text-center">1/3</p>
   </form>
   </div>
