add projects form routes to pick a category

--- a/modules/projects/client/views/create-project-pick-category.client.view.html
+++ b/modules/projects/client/views/create-project-pick-category.client.view.html
@@ -1,4 +1,4 @@
-<section ng-controller="ProjectsController">
+<section ng-controller="ProjectsControllers">
   <div class="col-md-12">
   <!--<form ui-sref="projects.category()" id="projectFormCategories" ng-submit="projects.team()">-->
     <!--<header>Pick a Category-->
