styled sign in page and three-part welcome screen.  The components are styled together but I still need to route authentication to home page once the user database is linked

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -40,7 +40,7 @@ a:hover .header-profile-image {
 }
 
 #top-menu {
-  background-color: green;
+  background-color: #509e2f;
   color: white;
   cursor: pointer;
   height: 50px;
