--- a/modules/projects/client/views/create-project-pick-category.client.view.html
+++ b/modules/projects/client/views/create-project-pick-category.client.view.html
@@ -1,34 +1,34 @@
 <section ng-controller="ProjectsControllers">
   <div class="col-md-12">
-  <!--<form ui-sref="projects.category()" id="projectFormCategories" ng-submit="projects.team()">-->
-    <!--<header>Pick a Category-->
-    <!--</header>-->
-    <!--<div class="form-group">-->
-      <!--<section>-->
-        <!--<ul class="nav nav-tabs">-->
-          <!--<li class="active"><a data-toggle="tab" href="#Themed">Themed</a></li>-->
-          <!--<li><a data-toggle="tab" href="#BestValue">Best Value</a></li>-->
-          <!--<li><a data-toggle="tab" href="#Categories">Categories</a></li>-->
-        <!--</ul>-->
+  <form name="projectFormCategories" class="form-verical" ng-submit="projects.category(projectFormCategories.$valid)">
+    <header>Pick a Category
+    </header>
+    <div class="form-group">
+      <section>
+        <ul class="nav nav-tabs">
+          <li class="active"><a data-toggle="tab" href="#Themed">Themed</a></li>
+          <li><a data-toggle="tab" href="#BestValue">Best Value</a></li>
+          <li><a data-toggle="tab" href="#Categories">Categories</a></li>
+        </ul>
 
-        <!--<div class="tab-content">-->
-          <!--<div id="Themed" class="tab-pane fade in active">-->
-            <!--<p>For this category you'll have to address the following problems.</p>-->
-            <!--<p>1. Buisness problem/need</p>-->
-            <!--<p>2. Challenges/users</p>-->
-            <!--<p>3. Remember that...</p>-->
-          <!--</div>-->
-          <!--<div id="BestValue" class="tab-pane fade">-->
-            <!--<p>Best value content</p>-->
-          <!--</div>-->
-          <!--<div id="Categories" class="tab-pane fade">-->
-            <!--<p>Some content in categories tab.</p>-->
-          <!--</div>-->
-        <!--</div>-->
-      <!--</section>-->
-    <!--</div>-->
-    <!--<button type="submit" color="PMS 362c" class="btn btn-success btn-lg btn-block">Next></button>-->
-    <!--<p id="progress" class="form-text text-center">2/3</p>-->
-  <!--</form>-->
+        <div class="tab-content">
+          <div id="Themed" class="tab-pane fade in active">
+            <p>For this category you'll have to address the following problems.</p>
+            <p>1. Buisness problem/need</p>
+            <p>2. Challenges/users</p>
+            <p>3. Remember that...</p>
+          </div>
+          <div id="BestValue" class="tab-pane fade">
+            <p>Best value content</p>
+          </div>
+          <div id="Categories" class="tab-pane fade">
+            <p>Some content in categories tab.</p>
+          </div>
+        </div>
+      </section>
+    </div>
+    <button type="submit" ui-sref ="projects.team()" color="PMS 362c" class="btn btn-success btn-lg btn-block">Next></button>
+    <p id="progress" class="form-text text-center">2/3</p>
+  </form>
   </div>
 </section>
