Fix controller name

--- a/modules/projects/client/views/create-project-pick-category.client.view.html
+++ b/modules/projects/client/views/create-project-pick-category.client.view.html
@@ -1,4 +1,4 @@
-<section ng-controller="ProjectsControllers">
+<section ng-controller="ProjectsController">
   <div class="col-md-12">
   <form name="projectFormCategories" class="form-verical" ng-submit="projects.category(projectFormCategories.$valid)">
     <header>Pick a Category
