--- a/modules/projects/client/views/create-project.client.view.html
+++ b/modules/projects/client/views/create-project.client.view.html
@@ -1,4 +1,4 @@
-<section ng-controller="ProjectsControllers">
+<section ng-controller="ProjectsController">
   <div class="col-md-12">
   <form name="projectForm" class="form-vertical" ng-submit="create(projectForm.$valid)">
     <fieldset>
