--- a/modules/projects/client/views/view-project.client.view.html
+++ b/modules/projects/client/views/view-project.client.view.html
@@ -5,7 +5,7 @@
     <title>view-project</title>
     <link rel="stylesheet" href="../css/projects.css">
   </head>
-  <section ng-controller="ProjectsControllers">
+  <section ng-controller="ProjectsController">
     <header class="view-title" ng-options="project in projects">
       <h1>{{ project.title }}</h1>
     </header>
