--- a/modules/projects/client/css/projects.css
+++ b/modules/projects/client/css/projects.css
@@ -7,9 +7,11 @@
   padding: 10px;
 }
 
-.list-group p {
-  padding: 10px;
+.list-group-item {
+  font-family: "Times New Roman", Times, serif;
+  padding: 20px;
 }
+
 
 /*
  * projects-view
