--- a/modules/projects/client/views/list-projects.client.view.html
+++ b/modules/projects/client/views/list-projects.client.view.html
@@ -10,9 +10,9 @@
   <div class="container">
     <div class="list-group" ng-repeat="project in projects|orderBy:random">
       <a href="#" class="list-group-item">
-        {{project.title}}<br>
-        {{project.category}}<br>
-        {{project.description.short}}
+        <h4 class="list-group-item-heading">{{project.title}}</h4>
+        <h6 class="list-group-item-heading">{{project.category}}</h6>
+        <p class="list-group-item-text">{{project.description.short}}</p>
       </a>
     </div>
   </div>
