--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -1,3 +1,7 @@
 <section ng-controller="HomeController">
-    <a ui-sref="projects.create()">Add Project</a>
+    <div class="add-project" ui-sref="projects.create()">
+        <h3 class="title">Submit a project</h3>
+        <p class="description">Have a solid idea? Submit your project now!</p>
+        <p class="sub-title">Start now</p>
+    </div>
 </section>
