--- a/modules/projects/client/css/projects.css
+++ b/modules/projects/client/css/projects.css
@@ -33,3 +33,42 @@
   width: 500px;
   padding: 10px;
 }
+
+.add-project {
+  background-color: #509e2f;
+  width: 100%;
+  padding: 10px;
+  color: white;
+  cursor: pointer;
+}
+
+.add-project h3 {
+  margin-top: 5px;
+  margin-bottom: 0px;
+}
+
+.add-project .sub-title {
+  text-transform: uppercase;
+  margin-top: 10px;
+}
+
+ul.team-list {
+  list-style-type: none;
+  width: 100%;
+  padding: 0px;
+  height: 40px;
+  margin-bottom: 15px;
+}
+
+ul.team-list li {
+  float: left;
+  background-color: grey;
+  border: 3px solid #333333;
+  border-radius: 100px;
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  line-height: 40px;
+  margin-right: 15px;
+  font-size: 18px;
+}
