--- a/modules/projects/client/views/create-project-pick-team.client.view.html
+++ b/modules/projects/client/views/create-project-pick-team.client.view.html
@@ -1,7 +1,14 @@
 <section ng-controller="ProjectsController">
-  <div class="col-md-12">
-    <header>Team members
-    </header>
+  <div class="col-xs-12">
+    <h2>Team members</h2>
+    <div class="row">
+      <div class="col-xs-12">
+        <ul class="team-list">
+          <li><i class="glyphicon glyphicon-user"></i></li>
+          <li><i class="glyphicon glyphicon-plus"></i></li>
+        </ul>
+      </div>
+    </div>
 
     <div ng-show="error" class="text-danger">
       <strong ng-bind="error"></strong>
@@ -10,14 +17,15 @@
       <strong ng-bind="success"></strong>
     </div>
     <div class="input-group" id="searchBar">
-      <span class="input-group-addon" id="sizing-addon1"><span class="glyphicon glyphicon-search"></span></span>
+      <span class="input-group-addon" id="sizing-addon"><span class="glyphicon glyphicon-search"></span></span>
       <input type="text" class="form-control" placeholder="Search" ng-model="query">
     </div>
     <div class="tableWrapper">
-      <table class="table table-striped table-hover">
+      <table class="table table-hover">
         <tr ng-repeat="user in users | filter: query" ui-sref="addteammember">
-          <td>{{user.icon}}</td>
+          <td><i class="glyphicon glyphicon-user"></i></td>
           <td>{{user.name}}</td>
+          <td><button class="btn"><i class="glyphicon glyphicon-plus"></i> Add</button></td>
         </tr>
       </table>
     </div>
