--- a/modules/projects/client/css/projects.css
+++ b/modules/projects/client/css/projects.css
@@ -11,7 +11,6 @@
   padding: 20px;
 }
 
-
 /*
  * projects-view
  */
@@ -70,4 +69,8 @@ ul.team-list li {
   line-height: 40px;
   margin-right: 15px;
   font-size: 18px;
+}
+
+.progress-bar {
+  background-color: #115e67;
 }
