--- a/modules/projects/client/views/create-project-pick-team.client.view.html
+++ b/modules/projects/client/views/create-project-pick-team.client.view.html
@@ -1,6 +1,11 @@
 <section ng-controller="ProjectsController">
   <div class="col-xs-12">
-    <h2>Team members</h2>
+    <div class="progress">
+      <div class="progress-bar" role="progressbar" aria-valuenow="97" aria-valuemin="0" aria-valuemax="100" style="width: 97%;">
+        <span class="sr-only">97% Complete</span>
+      </div>
+    </div>
+    <h2>Add team members</h2>
     <div class="row">
       <div class="col-xs-12">
         <ul class="team-list">
@@ -25,11 +30,11 @@
         <tr ng-repeat="user in users | filter: query" ui-sref="addteammember">
           <td><i class="glyphicon glyphicon-user"></i></td>
           <td>{{user.name}}</td>
-          <td><button class="btn"><i class="glyphicon glyphicon-plus"></i> Add</button></td>
+          <td class="text-right"><button class="btn"><i class="glyphicon glyphicon-plus"></i> Add</button></td>
         </tr>
       </table>
     </div>
-    <button type="submit" ui-sref ="projects.team()" color="PMS 362c" class="btn btn-success btn-lg btn-block">Next></button>
-    <p id="progress" class="form-text text-center">3/3</p>
+    <button type="submit" ui-sref="projects.team()" color="PMS 362c" class="btn btn-success btn-lg btn-block">Next></button>
+    <p class="form-text text-center">Step 3/3</p>
   </div>
 </section>
