--- a/modules/projects/client/views/create-project.client.view.html
+++ b/modules/projects/client/views/create-project.client.view.html
@@ -1,22 +1,28 @@
 <section ng-controller="ProjectsController">
   <div class="col-md-12">
-  <form name="projectForm" class="form-vertical" ng-submit="create(projectForm.$valid)">
-    <fieldset>
-    <div class="form-group" show-errors>
-      <input type="text" name="title" class="form-control" ng-model="title" placeholder="Title" required>
-      <div ng-messages="projectForm.title.$error" role="alert">
-        <p class="help-block error-text" ng-message="required">Project title is required</p>
+    <div class="progress">
+      <div class="progress-bar" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%;">
+        <span class="sr-only">33% Complete</span>
       </div>
     </div>
-    <div class="form-group" show-errors>
-      <textarea name="details" rows="5" class="form-control" ng-model="details" placeholder="Decribe your project, make it simple and cool..." required></textarea>
-      <div ng-messages="projectForm.details.$error" role="alert">
-        <p class="help-block error-text" ng-message="required">Project details are required</p>
-      </div>
-    </div>
-    <button type="submit" ui-sref="projects.category()"color="PMS 362c" class="btn btn-success btn-lg btn-block">Next></button>
-    <p id="progress" class="form-text text-center">1/3</p>
-    </fieldset>
-  </form>
+    <h2>Add project</h2>
+    <form name="projectForm" class="form-vertical" ng-submit="create(projectForm.$valid)">
+      <fieldset>
+        <div class="form-group" show-errors>
+          <input type="text" name="title" class="form-control" ng-model="title" placeholder="Title" required>
+          <div ng-messages="projectForm.title.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Project title is required</p>
+          </div>
+        </div>
+        <div class="form-group" show-errors>
+          <textarea name="details" rows="5" class="form-control" ng-model="details" placeholder="Decribe your project, make it simple and cool..." required></textarea>
+          <div ng-messages="projectForm.details.$error" role="alert">
+            <p class="help-block error-text" ng-message="required">Project details are required</p>
+          </div>
+        </div>
+        <button type="submit" ui-sref="projects.category()"color="PMS 362c" class="btn btn-success btn-lg btn-block">Next></button>
+        <p class="form-text text-center">Step 1/3</p>
+      </fieldset>
+    </form>
   </div>
 </section>
