Give ability to add projects

--- a/modules/projects/client/views/create-project-pick-team.client.view.html
+++ b/modules/projects/client/views/create-project-pick-team.client.view.html
@@ -34,7 +34,7 @@
         </tr>
       </table>
     </div>
-    <button type="submit" ui-sref="projects.team()" color="PMS 362c" class="btn btn-success btn-lg btn-block">Next></button>
+    <button ng-click="create()" color="PMS 362c" class="btn btn-success btn-lg btn-block">Add Project</button>
     <p class="form-text text-center">Step 3/3</p>
   </div>
 </section>
