--- a/modules/projects/client/views/create-project-pick-category.client.view.html
+++ b/modules/projects/client/views/create-project-pick-category.client.view.html
@@ -1,11 +1,11 @@
 <section ng-controller="ProjectsController">
-  <div class="col-md-12">
+  <div class="col-xs-12">
     <div class="progress">
       <div class="progress-bar" role="progressbar" aria-valuenow="66" aria-valuemin="0" aria-valuemax="100" style="width: 66%;">
         <span class="sr-only">66% Complete</span>
       </div>
     </div>
-    <form name="projectFormCategories" class="form-verical" ng-submit="projects.category(projectFormCategories.$valid)">
+    <form name="projectFormCategories" class="form-verical">
       <h2>Pick a category</h2>
       <div class="form-group">
         <section>
@@ -31,7 +31,7 @@
           </div>
         </section>
       </div>
-      <button type="submit" ui-sref ="projects.team()" color="PMS 362c" class="btn btn-success btn-lg btn-block">Next></button>
+      <button type="submit" ng-click="saveProjectCategory()" color="PMS 362c" class="btn btn-success btn-lg btn-block">Next></button>
       <p class="form-text text-center">Step 2/3</p>
     </form>
   </div>
