--- a/modules/projects/client/views/create-project.client.view.html
+++ b/modules/projects/client/views/create-project.client.view.html
@@ -1,12 +1,12 @@
 <section ng-controller="ProjectsController">
-  <div class="col-md-12">
+  <div class="col-xs-12">
     <div class="progress">
       <div class="progress-bar" role="progressbar" aria-valuenow="33" aria-valuemin="0" aria-valuemax="100" style="width: 33%;">
         <span class="sr-only">33% Complete</span>
       </div>
     </div>
     <h2>Add project</h2>
-    <form name="projectForm" class="form-vertical" ng-submit="create(projectForm.$valid)">
+    <form name="projectForm" class="form-vertical">
       <fieldset>
         <div class="form-group" show-errors>
           <input type="text" name="title" class="form-control" ng-model="title" placeholder="Title" required>
@@ -20,7 +20,7 @@
             <p class="help-block error-text" ng-message="required">Project details are required</p>
           </div>
         </div>
-        <button type="submit" ui-sref="projects.category()"color="PMS 362c" class="btn btn-success btn-lg btn-block">Next></button>
+        <button type="submit" ng-click="saveProjectInfo()" color="PMS 362c" class="btn btn-success btn-lg btn-block">Next></button>
         <p class="form-text text-center">Step 1/3</p>
       </fieldset>
     </form>
