--- a/modules/projects/client/views/list-projects.client.view.html
+++ b/modules/projects/client/views/list-projects.client.view.html
@@ -7,7 +7,7 @@
 <body>
 
 <section ng-controller="ProjectsController" ng-init="find()">
-  <div class="list-group" ui-sref="projects.view({projectId: project._id})" ng-repeat="project in projects|orderBy:random">
+  <div class="list-group project-item" ui-sref="projects.view({projectId: project._id})" ng-repeat="project in projects|orderBy:random">
     <a  class="list-group-item">
       <h4 class="list-group-item-heading">{{project.title}}</h4>
       <h6 class="list-group-item-heading">{{project.category}}</h6>
