--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -1,29 +1,31 @@
 <div ng-controller="AuthenticationController">
-  <h3 class="col-md-12 text-center">Or with your account</h3>
+
+  <h3 class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">Welcome!</h3>
   <div class="col-xs-offset-2 col-xs-8 col-md-offset-4 col-md-4">
     <form name="userForm" ng-submit="signin(userForm.$valid)" class="signin" novalidate autocomplete="off">
       <fieldset>
         <div class="form-group" show-errors>
-          <label for="username">Username</label>
-          <input type="text" id="username" name="username" class="form-control" ng-model="credentials.username" placeholder="Username" lowercase required>
+          <label id = "fields" for="username">Email</label>
+          <input type="text" id="username" name="username" style="border:4px solid #509e2f" class="form-control" ng-model="credentials.username" placeholder="your Ultimate Email" lowercase required>
           <div ng-messages="userForm.username.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Username is required.</p>
           </div>
         </div>
         <div class="form-group" show-errors>
-          <label for="password">Password</label>
-          <input type="password" id="password" name="password" class="form-control" ng-model="credentials.password" placeholder="Password" required>
+          <label id = "fields" for="password">Password</label>
+          <input type="{{showpassword ? 'text' : 'password'}}" id="password" name="password" style="border:4px solid #509e2f" class="form-control" ng-model="credentials.password" placeholder="your email password" required>
+          <input id="option" class="custom_image" type="checkbox" ng-model="showpassword" ng-checked="false" />
+          <label id = "subtext" for="option">View Password</label>
           <div ng-messages="userForm.password.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Password is required.</p>
           </div>
         </div>
-        <div class="text-center form-group">
-          <button type="submit" class="btn btn-primary">Sign in</button>
-          &nbsp; or&nbsp;
-          <a ui-sref="authentication.signup">Sign up</a>
+        <div class= "form-group">
+          <button type="submit" class="btn btn-primary round">Sign in</button>
         </div>
-        <div class="text-center forgot-password">
-          <a ui-sref="password.forgot">Forgot your password?</a>
+        <div class="text-left">
+          <a href="/"><span class="glyphicon glyphicon-home"></span></a>
+          <a ui-sref="password.forgot"></a>
         </div>
         <alert type="danger" ng-show="error" class="text-center text-danger">
           <span ng-bind="error"></span>
