--- a/modules/users/client/css/users.css
+++ b/modules/users/client/css/users.css
@@ -35,9 +35,8 @@
   max-height: 150px;
 }
 
-#wrapper {
-  margin: 0 auto;
-}
+
+
 
 #fields {
   color: #63666a;
@@ -52,19 +51,32 @@
 }
 #container1 {
   text-align: center;
+
+  left:0;
+  right:0;
+  margin-top:100vh;
+  padding-bottom:10vh;
+  background-color:#ddd;
+}
+#container3 {
+  text-align:center;
   position:absolute;
   left:0;
   right:0;
-  padding-left:10vh;
-  padding-right:10vh;
-  padding-top:5vh;
-  background-color:#eeeeee;
 }
 #container2 {
   text-align: center;
-  margin-bottom:10vh;
+  margin-bottom:50px;
 }
+#container4 {
+  background-color:#ddd;
 
+}
+#loginscreen {
+  padding-left:10vh;
+  padding-right:10vh;
+  padding-top:10vh;
+}
 .btn {
     padding: 14px 24px;
     border: 0 none;
