finished mock routing, back button, home button goes to main screen

--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -24,7 +24,11 @@
           <button type="submit" class="btn btn-primary round">Sign in</button>
         </div>
         <div class="text-left">
-          <a href="/"><span class="glyphicon glyphicon-home"></span></a>
+          <a href="/"><span class="glyphicon glyphicon-arrow-left"></span></a>
+          <a ui-sref="password.forgot"></a>
+        </div>
+        <div class="text-left">
+          <a href="/home"><span class="glyphicon glyphicon-home"></span></a>
           <a ui-sref="password.forgot"></a>
         </div>
         <alert type="danger" ng-show="error" class="text-center text-danger">
