Implemented ideas section, create and view listings for now.  there are lots of seeds in the database but i will clean them up soon

--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -7,6 +7,9 @@ body {
 .undecorated-link:hover {
   text-decoration: none;
 }
+.add-idea {
+  margin-top: 6vh;
+}
 [ng\:cloak],
 [ng-cloak],
 [x-ng-cloak],
