--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -3,6 +3,7 @@
         <a href="#" ng-click="closeMenu()">Close &times;</a>
         <a ui-sref="global()">Home</a>
         <a ui-sref="projects.list()">Projects</a>
+        <a ui-sref="ideas.list()">Ideas</a>
     </nav>
 
     <div id="top-menu" ng-click="toggleCollapsibleMenu()">
