--- a/modules/core/client/views/home.client.view.html
+++ b/modules/core/client/views/home.client.view.html
@@ -4,4 +4,9 @@
         <p class="description">Have a solid idea? Submit your project now!</p>
         <p class="sub-title">Start now</p>
     </div>
+    <div class="add-idea" ui-sref="ideas.create()">
+      <h3 class="title">Submit a new idea</h3>
+      <p class="description">Don't be shy!</p>
+      <p class="sub-title">Submit it now!</p>
+    </div>
 </section>
