ideas section delete and view listings.  added signin to navbar

--- a/modules/core/client/views/header.client.view.html
+++ b/modules/core/client/views/header.client.view.html
@@ -4,6 +4,7 @@
         <a ui-sref="global()">Home</a>
         <a ui-sref="projects.list()">Projects</a>
         <a ui-sref="ideas.list()">Ideas</a>
+        <a class="signin" ui-sref="login()">Sign In</a>
     </nav>
 
     <div id="top-menu" ng-click="toggleCollapsibleMenu()">
