--- a/modules/users/client/views/authentication/signin.client.view.html
+++ b/modules/users/client/views/authentication/signin.client.view.html
@@ -26,9 +26,7 @@
         <div class="text-left">
           <a href="/"><span class="glyphicon glyphicon-arrow-left"></span></a>
           <a ui-sref="password.forgot"></a>
-        </div>
-        <div class="text-left">
-          <a href="/home"><span class="glyphicon glyphicon-home"></span></a>
+          <a style="margin-left: 1vh" ui-sref="global()"><span class="glyphicon glyphicon-home"></span></a>
           <a ui-sref="password.forgot"></a>
         </div>
         <alert type="danger" ng-show="error" class="text-center text-danger">
