--- a/modules/users/client/views/authentication/welcome.client.view.html
+++ b/modules/users/client/views/authentication/welcome.client.view.html
@@ -56,7 +56,7 @@
 
           <div id="container2">
             <div style="margin-top:50px">
-            <a href="/1" class="btn btn-primary outline"> Sign-in</a>
+            <a ui-sref="login()" class="btn btn-primary outline"> Sign-in</a>
             </div>
           </div>
 </label>
