--- a/modules/core/client/views/admin/index.client.view.html
+++ b/modules/core/client/views/admin/index.client.view.html
@@ -1,3 +1,3 @@
 <section ng-controller="HomeController">
-  Admin Index
+  <a ui-sref="eventCategories.index()">Manage Event Categories</a>
 </section>
