--- a/modules/eventCategories/client/views/list.client.view.html
+++ b/modules/eventCategories/client/views/list.client.view.html
@@ -1,7 +1,17 @@
 <section ng-controller="EventCategoriesController" ng-init="find()">
-  <a ui-sref="eventCategories.create()">Create New Category</a>
+  <div>
+    <a ui-sref="eventCategories.create()" class="btn btn-primary">Create New Category</a>
+  </div>
 
-  <div ng-repeat="eventCategory in eventCategories">
-    <a ui-sref="eventCategories.edit({eventCategoryId: eventCategory._id})">{{eventCategory.title}}</a>
+  <div class="event-category" ng-repeat="eventCategory in eventCategories">
+    <h5>{{eventCategory.title}}</h5>
+    <div>
+      {{eventCategory.description}}
+    </div>
+    <h6>Question List</h6>
+    <p ng-repeat="question in eventCategory.questions">
+      {{question}}
+    </p>
+    <a class="btn btn-info btn-sm" ui-sref="eventCategories.edit({eventCategoryId: eventCategory._id})">Edit</a>
   </div>
 </section>
