increment votes field when vote clicked

--- a/modules/projects/client/views/view-project.client.view.html
+++ b/modules/projects/client/views/view-project.client.view.html
@@ -18,10 +18,9 @@
 
     <div class="project-content" ng-bind="project.description.long"></div>
     <div>
-      <button type="submit" ui-sref ="projects.vote()" class="btn btn-success btn-md btn-block">Vote</button>
+      <button type="submit" ng-click="vote(project);" class="btn btn-success btn-md btn-block">Vote</button>
     </div>
 
   </section>
 
 </html>
-
