--- a/modules/projects/client/css/projects.css
+++ b/modules/projects/client/css/projects.css
@@ -14,6 +14,13 @@
 /*
  * projects-view
  */
+ #voteButton {
+   background-color: #509E2F;
+ }
+
+/*
+ * projects-add
+ */
 .view-title {
   margin: auto;
   width: 500px;
