--- a/modules/faqs/client/views/list-faqs.client.view.html
+++ b/modules/faqs/client/views/list-faqs.client.view.html
@@ -1,4 +1,4 @@
-<section ng-controller="FAQsController">
+<section ng-controller="FAQsController" ng-init="find()">
   <div class="page-header">
     <h1>FAQ</h1>
   </div>
