--- a/modules/articles/client/views/list-articles.client.view.html
+++ b/modules/articles/client/views/list-articles.client.view.html
@@ -1,6 +1,10 @@
 <section ng-controller="ArticlesController" ng-init="find()">
   <div class="page-header">
     <h1>Articles</h1>
+    <div class="btn-group">
+      <button class="btn"><i class="glyphicon glyphicon-plus"></i> Add</button>
+    </div>
+
   </div>
   <div class="list-group">
     <a ng-repeat="article in articles" ui-sref="articles.view({articleId: article._id})" class="list-group-item">
