--- a/modules/eventCategories/client/views/edit.client.view.html
+++ b/modules/eventCategories/client/views/edit.client.view.html
@@ -10,8 +10,19 @@
       <label for="description">Description</label>
       <textarea name="description" ng-model="eventCategory.description" id="description" class="form-control" cols="30" rows="10" placeholder="Description"></textarea>
     </div>
+    <div class="form-group" ng-repeat="question in questions">
+      <label for="question-{{question.num}}">Required Question {{question.num}}</label>
+      <textarea name="description" ng-model="question.content" id="question-{{question.num}}" class="form-control" cols="10" rows="5"></textarea>
+      <a class="btn btn-danger" ng-click="deleteQuestion(question.num)">Delete</a>
+    </div>
+    <div class="form-group">
+      <a class="btn btn-warning" ng-click="addQuestion()">
+        Add Question
+      </a>
+    </div>
     <div class="form-group">
       <input type="submit" value="Update" class="btn btn-default">
+      <a class="btn btn-danger" ng-click="remove(eventCategory)">Delete</a>
     </div>
   </form>
 </section>
