--- a/modules/faqs/client/views/list-faqs.client.view.html
+++ b/modules/faqs/client/views/list-faqs.client.view.html
@@ -10,14 +10,14 @@
   <div class="page-header">
     <h1>FAQ</h1>
     <div class="btn-group">
-      <button type="btn" class="btn btn-xs pull-right"  ui-sref="faqs.post()"><i class="glyphicon glyphicon-plus"></i> Ask</button>
+      <button type="btn" class="btn btn-xs pull-right"  ui-sref="faqs.post()"><i class="glyphicon glyphicon-plus"><div class="glyphicon glyphicon-question-sign"></div></i> Ask a question</button>
     </div>
   </div>
   <div class="list-group" ui-sref="faqs.post({faqId: faq._id})" ng-repeat="faq in faqs">
     <a  class="list-group-item">
-      <h4 class="list-group-item-heading">{{faq.question}}</h4>
-      <h6 class="list-group-item-heading">{{faq.solution}}</h6>
-      <p class="list-group-item-text">{{faq.solved}}</p>
+      <h4 class="list-group-item-heading glyphicon glyphicon-question-sign"> {{faq.question}} </h4>
+      <h6 class="list-group-item-heading  glyphicon glyphicon-exclamation-sign"> {{faq.solution}} </h6>
+      <p class="list-group-item-text glyphicon glyphicon-warning-sign"> {{faq.solved}} </p>
     </a>
   </div>
 </section>
