--- a/modules/events/client/views/edit.client.view.html
+++ b/modules/events/client/views/edit.client.view.html
@@ -7,6 +7,20 @@
       <input name="title" type="text" ng-model="event.title" id="title" class="form-control" placeholder="Title">
     </div>
     <div class="form-group">
+      <label for="description">Description</label>
+      <textarea name="description" type="text" ng-model="event.description" id="description" class="form-control" placeholder="Description"></textarea>
+    </div>
+    <div class="form-group">
+      <label for="locations">Location(s)</label>
+      <input name="locations" type="text" ng-model="event.locations" id="locations" class="form-control" placeholder="Locations">
+    </div>
+    <div class="checkbox" ng-repeat="(index, eventCategory) in eventCategories">
+      <label>
+        <input type="checkbox" ng-model="selectedCategories[index]">
+        {{eventCategory.title}}
+      </label>
+    </div>
+    <div class="form-group">
       <input type="submit" value="Update" class="btn btn-default">
       <a class="btn btn-danger" ng-click="remove(event)">Delete</a>
     </div>
