sort projects by number of votes

--- a/modules/projects/client/views/list-projects.client.view.html
+++ b/modules/projects/client/views/list-projects.client.view.html
@@ -6,12 +6,19 @@
 </head>
 <body>
 
-<section ng-controller="ProjectsController" ng-init="find()">
-  <div class="list-group" ui-sref="projects.view({projectId: project._id})" ng-repeat="project in projects|orderBy:random">
+<section ng-controller="ProjectsController" ng-init="find();sortType = randomSort">
+  <div class="pull-right">
+    <a class="btn btn-primary" ng-click="sortType = '-votes'">
+      <i class="glyphicon glyphicon-sort"></i>
+    </a>
+  </div>
+
+  <div class="list-group" id="projects-list" ui-sref="projects.view({projectId: project._id})" ng-repeat="project in projects|orderBy:sortType">
     <a  class="list-group-item">
       <h4 class="list-group-item-heading">{{project.title}}</h4>
       <h6 class="list-group-item-heading">{{project.category}}</h6>
       <p class="list-group-item-text">{{project.description.short}}</p>
+      <p class="list-group-item-text">{{project.votes}}</p>
     </a>
   </div>
 </section>
