see vote count when sort button clicked

--- a/modules/projects/client/css/projects.css
+++ b/modules/projects/client/css/projects.css
@@ -11,6 +11,14 @@
   padding: 20px;
 }
 
+.pull-right {
+  padding: 20px;
+}
+
+.badge {
+  background-color: #509E2F;
+}
+
 /*
  * projects-view
  */
