--- a/modules/projects/client/views/list-projects.client.view.html
+++ b/modules/projects/client/views/list-projects.client.view.html
@@ -7,18 +7,19 @@
 <body>
 
 <section ng-controller="ProjectsController" ng-init="find();sortType = randomSort">
-  <div class="pull-right">
-    <a class="btn btn-primary" ng-click="sortType = '-votes'">
+  <div class="row">
+    <div class="pull-right">
+    <a class="btn btn-primary" ng-click="sortType = '-votes';seeVotes = !seeVotes">
       <i class="glyphicon glyphicon-sort"></i>
     </a>
+    </div>
   </div>
 
   <div class="list-group" id="projects-list" ui-sref="projects.view({projectId: project._id})" ng-repeat="project in projects|orderBy:sortType">
-    <a  class="list-group-item">
-      <h4 class="list-group-item-heading">{{project.title}}</h4>
+    <a  class="list-group-item clearfix">
+      <h4 class="list-group-item-heading">{{project.title}}<span class="badge pull-right" ng-show="seeVotes">{{project.votes}}</span></h4>
       <h6 class="list-group-item-heading">{{project.category}}</h6>
       <p class="list-group-item-text">{{project.description.short}}</p>
-      <p class="list-group-item-text">{{project.votes}}</p>
     </a>
   </div>
 </section>
